[package]
name = "lapislazuli"
version = "0.1.1"
edition = "2024"
authors = ["Jorge Pardo"]
license = "MIT OR Apache-2.0"
description = "A headless component library for GPUI."
repository = "https://github.com/J0R6IT0/lapislazuli"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed.git" }